fixed UI issues, uncovered bug
Bug exists need to configure certs for cloud deployment.  woks local but
not on appharbor

--- a/sdtime-web/Content/sdtime.css
+++ b/sdtime-web/Content/sdtime.css
@@ -10,12 +10,22 @@
 
 .sd-logo 
 {
-    
-	font: bold 64px Verdana, Tahoma, sans-serif;
+    position:absolute;
+    top: 10px;
+    left: 76px;
+    font-size: 36px;
+	margin-left: 12px;
+	color: #636363;
+}
 
-	margin-left: 88px;
-	margin-top: -68px;
-	color: #f3f3f3;
+span.userwelcome  
+{
+    
+}
+
+a.userwelcome  
+{
+    color: Red;
 }
 
 .logoimg 
@@ -27,7 +37,9 @@
 
 .subheader {
 	width: 100%;
-	height: 56px;
+	height: 36px;
+	padding-top: 8px;
+	padding-left: 8px;
 	background: url(../img/subheader-bg.png) repeat-x top left #f8f8f8;
 }
 
@@ -70,6 +82,7 @@ a.new-time-entry:hover {
 	background: linear-gradient(top, #66b746, #28880A);
 }
 a.new-time-entry:active,
+a.new-time-entry:inactive,
 a.new-time-entry:focus {
 	background: #2e8d11;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
